@@ -88,6 +88,7 @@
 * MIT: Change test URL [Buitragox] #5335
 * Nuvei: Fix NTID stored credentials [javierpedrozaing] #5334
 * StripePI: Fix the store three_d_secure_usage field [yunnydang] #5338
+* Litle: Success codes added to valid responses [jherreraa] #5339
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
